[tool.poetry]
name = "mergekit"
version = "0.1.0"
description = ""
authors = ["toma.tanaka <toma.tanaka@brainpad.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
